syntax = "proto3";

package product;

import "product/request.proto";

service ProductService {
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {}
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
}

service CategoryService {
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse) {}
  rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse) {}
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse) {}
  rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse) {}
  rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryResponse) {}
}